--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <title>D3.js Buffet</title>
+        <title>Web Dev Bootcamp</title>
 
         <link rel="stylesheet" href="css/reveal.css">
         <link rel="stylesheet" href="css/theme/black.css">
@@ -26,45 +26,51 @@
             <div class="slides">
                 <section data-markdown>
                     <textarea data-template>
-                    ### d3.js Buffet
+                    ### Web Dev Bootcamp
+
+                    ##### For ~~when~~ if this whole Data Science thing just doesn't work out
 
                     Shane Caldwell and Roger Filmyer
                     </textarea>
                 </section>
                 <section data-markdown>
                     <textarea data-template>
-                       # JavaScript:
+                        # You might be thinking:
+                        - Wait, what
 
-                        - Interpreted language used primarily within the browser
-                        - Manipulates the DOM (Document Object Model)
-                        - Asynchronously shuffles data from client to server
+                        - I only want to learn backend
+
+                        - The web can be abstracted away for me so I don't have to understand it
+
+                        - My name is Noah and the web singlehandedly destroyed my family don't make me do thi
+
                     </textarea>
                 </section>
                 <section data-markdown>
                     <textarea data-template>
-                        # Why JavaScript:
-
-                        - Disable JavaScript in your browser, and you're left with HTML and CSS
-                        - This sets style (so things can still be pretty) but they're no responsive to user action
-                        - JavaScript is often what enables you to go from web-site to web-application
+                        # We already locked the doors, get over it. 
                     </textarea>
                 </section>
                 <section data-markdown>
                     <textarea data-template>
-                        # Visualizations on the web:
+                        # Todays Curriculum
 
-                        - Check out a cool pudding article like[The Differences in How CNN, MSNBC, and FOX Cover the News](https://pudding.cool/2018/01/chyrons/)
-                        - Look at the way the DOM reacts to us - making the web page interactive. 
-                        - These are made with D3
+                        - Everything you need to learn d3.js
+
+                        - HTML 
+                        - css 
+                        - JavaScript
+                        - SVG
                     </textarea>
                 </section>
                 <section data-markdown>
                     <textarea data-template>
-                        # Why not Plotly?
+                        # Why should I pay attention?
 
-                        - Plotly provides an API to create D3 charts and applications
-                        - For basic things, this is easier then trying to make things work in JavaScript
-                        - For specific, weird visualizations, you want access to the full power of D3 - and that means writing it yourself. 
+                        - We're going to force you to build a website after this using all the elements we discussed. 
+                        - When Roger and I walk around, you'll feel awkward asking us stuff we already explicitly explained during this presentation.
+                        - Roger will say things like "Yeah, like we said in the presentation..."
+                        - So awkward
                     </textarea>
                 </section>
                 <section data-markdown>
