See how HTML works

--- a/index.html
+++ b/index.html
@@ -75,12 +75,32 @@
                 </section>
                 <section data-markdown>
                     <textarea data-template>
-                        # Pre-requisites - After doing your class reading you should know:
+                        # HTML 
 
-                        - How to write basic JavaScript
-                        - How to get basic JavaScript to run in the browser                    
+                    - Hyper Text Markup Language
+                    - Used to structure content for web browsers
+                    - Stored in plaintext .html files
                     </textarea>
                 </section>
+                <section data-markdown>
+                        <textarea data-template>
+                            # Example
+                            
+                        ```HTML
+                        <!DOCTYPE HTML>
+                        <html>
+                            <head>
+                                <title>Best Title</title>
+                            </head>
+                            <body>
+                                <h1>Page Title</h1>
+                                <p>Super interesting paragraph</p>
+                            </body>
+
+                        </html>
+                        ```
+                        </textarea>
+                    </section>
                 <section data-markdown>
                     <textarea data-template>
                             # Let's test that theory:
