Can't wait for this merge conflict

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <section data-markdown>
                     <textarea data-template>
                         # Structure & content
-
+                        - The tags define *elements*
                         - Defines a hierarchy of relations
                         - Page is made up of elements and their children
                         - For example h1 and p are both children of body
@@ -117,10 +117,36 @@
                             example <img src="saucy_photo.png">
                             <h1>, <h2>, <h3>, etc. Ordered list of headers, from 
                             smallest to largest
-
                         ```
                    </script>
                 </section>
+                <section data-markdown>
+                        <textarea data-template>
+                            ### For Lab Exercises
+                            - Clone this to your machine:
+                            - ```git clone https://github.com/SJCaldwell/webDevBootcamp.git```
+                            - ```cd webDevBootcamp```
+                            - ```python -m SimpleHTTPServer 8081``
+                            - This will serve up a lightweight webserver in python on port 8081
+                        </textarea>
+                    </section>
+                    <section data-markdown>
+                            <textarea data-template>
+                                ### Exercise 1
+                                - browser over to ```http://localhost:8081/Section1_HTML/test.html```
+                                - Pretty plain, right?
+                                - As an exercise, ```http://localhost:8081/Section1_HTML/broken.html``` is the same thing, but broken
+                                - Fix it
+                            </textarea>
+                        </section>
+                        <section data-markdown>
+                                <textarea data-template>
+                                    ### Class and IDs
+                                    - <p class="classhere">Added class </p>
+                                    - <div id="content"></div>
+                                    - These will allow you to reference certain elements from CSS and JS for styling and manipulation
+                                </textarea>
+                            </section>
                 <section data-markdown>
                     <textarea data-template>
                         ### The End
