fixed the missing section header

--- a/index.html
+++ b/index.html
@@ -245,7 +245,6 @@
 
                         After:
                         
-                        ```
                     </textarea>
                 </section>
 <!-- Selectors:
@@ -349,6 +348,7 @@
                         - The exercise here is instead to tell me what you can learn about the data structure d3 uses after the data is read in.
                         - You got 5 minutes to tell us what cool things you've learned. GO GO GO!                    </textarea>
                 </section>
+                    <section data-markdown>
                         <textarea data-template>
                             ### For Lab Exercises
                             - Clone this to your machine:
