css section done???

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
                         With CSS:
 
-                        ![Turo's front page, with CSS](/img/turo.png)
+                        ![Turo's front page, with CSS](img/turo_css.png)
                     </textarea>
                 </section>
                 <section data-markdown>
@@ -153,16 +153,16 @@
 
                         Without CSS:
 
-                        ![Turo's front page, with CSS](/img/turo_nocss.png)
+                        ![Turo's front page, with CSS](img/turo_nocss.png)
                     </textarea>
                 </section>
                 <section data-markdown>
                     <textarea data-template>
                         # HTML vs CSS
 
-                        Don't mix them:
+                        DON'T 👏 PUT 👏 STYLING 👏 IN 👏 YOUR 👏 HTML 👏:
 
-                        ![Church Street Media's website, with HTML side-by-side](/img/csmedia.png)
+                        ![Church Street Media's website, with HTML side-by-side](img/csmedia.png)
                     </textarea>
                 </section>
                 <section data-markdown>
@@ -181,6 +181,39 @@
                         6. Property Name (background-color)
                         9. Property Value (chartreuse)
 
+                    </textarea>
+                </section>
+                <section data-markdown>
+                    <textarea data-template>
+                        # Fonts/Colors:
+
+                        * <div style="font-size: 36px">font-size: 36px</div>
+                        * <div style="font-family: 'Times New Roman', Times, serif;">font-family: 'Times New Roman', Times, serif;</div>
+                        * <div style="color: #fb9fa4">color: #fb9fa4</div>
+                        * <div style="background-color: white; color: black">background-color: white; color: black</div>
+                    </textarea>
+                </section>
+                <section data-markdown>
+                    <textarea data-template>
+                        # Spacing:
+
+                        * <div style="background-color: white; color: black; margin: 0 50px;">margin: 0 50px;</div>
+                        * <div style="background-color: white; color: black; padding: 10%">padding: 10%</div>
+                    </textarea>
+                </section>
+                <style>
+                            #display-inline-demo li {
+                                padding-left: 20px;
+                                display: inline;
+                            }
+                </style>
+                <section data-markdown>
+                    <textarea data-template>
+                        # Layout:
+                        
+                        * <div><ol id="display-inline-demo"><li>Cascading</li><li>Style</li><li>Sheets</li></ol></div> (display: inline;)
+                        * <div style="background-color: white; color: black; display: none">display: none;</div> 
+                        * ^ (display: none)
                     </textarea>
                 </section>
                 <section data-markdown>
@@ -242,31 +275,20 @@
                         # Selectors
 
                         Before:
+                            ![](img/selectors_1_before.png)
 
                         After:
-                        
+                            ![](img/selectors_1_after.png)
                     </textarea>
                 </section>
-<!-- Selectors:
-    tag .class #id
-    Styles:
-        Fonts/Colors:
-            font-size
-            font-family
-            color
-            background-color
-        Spacing:
-            margin: 0 100%;
-            padding: 3px;
-        Layout:
-            display: block;
-            display: none;
-    margin, padding
-    "how do I remember this crap?"
-    * Google it!
-    * [Mozilla Developer Network](https://developer.mozilla.org)
-    * [w3schools](https://www.w3schools.com/)
--->
+                <section data-markdown>
+                    <textarea data-template>
+                        # How do I remember this?
+                        * Google it!
+                        * [Mozilla Developer Network](https://developer.mozilla.org)
+                        * [w3schools](https://www.w3schools.com/)
+                    </textarea>
+                </section>
                 <section data-markdown>
                     <textarea data-template>
                             # Little more on SVG
@@ -346,7 +368,8 @@
                         - Open exercise2.html
                         - As soon as you browser to the html, your data is read in. Nice!
                         - The exercise here is instead to tell me what you can learn about the data structure d3 uses after the data is read in.
-                        - You got 5 minutes to tell us what cool things you've learned. GO GO GO!                    </textarea>
+                        - You got 5 minutes to tell us what cool things you've learned. GO GO GO!                    
+                    </textarea>
                 </section>
                     <section data-markdown>
                         <textarea data-template>
