Starting JavaScript section

--- a/index.html
+++ b/index.html
@@ -291,6 +291,28 @@
                 </section>
                 <section data-markdown>
                     <textarea data-template>
+                            # JavaScript
+
+                            ![](img/javascript_vs_goodstuff.jpg)
+                    </textarea>
+                </section>
+                <section data-markdown>
+                    <textarea data-template>
+                            # It's not that bad
+
+                            ### Mostly
+
+                            - JavaScript is an interpreted language meant to be run in the browser.
+                            - It's what allows websites to be interactive. 
+                    </textarea>
+                </section>
+                <section data-markdown>
+                    <textarea data-template>
+                            - It CAN manipulate the HTML, but first let's just focus on JavaScript.
+                    </textarea>
+                </section>
+                <section data-markdown>
+                    <textarea data-template>
                             # Little more on SVG
 
                             - [Show little snippet of SVG here]
