--- a/index.html
+++ b/index.html
@@ -307,10 +307,48 @@
                     </textarea>
                 </section>
                 <section data-markdown>
+                        <textarea data-template>
+                                ### Defining variable
+                                ```JavaScript
+                                var i = 0;
+                                var a = "string";
+                                var bool = false;
+                                ```
+                                - Standard types: strings, numbers, booleans. 
+                        </textarea>
+                    </section>
+                    <section data-markdown>
+                            <textarea data-template>
+                                ### Defining variable
+                                 ```JavaScript
+                                    var i = 0;
+                                    var a = "string";
+                                    var bool = false;
+                                    ```
+                                    - Standard types: strings, numbers, booleans. 
+                            </textarea>
+                        </section>
+                <section data-markdown>
                     <textarea data-template>
-                            - It CAN manipulate the HTML, but first let's just focus on JavaScript.
+                            ### JavaScript Gotchas
+                            - This could be a really long section
+                            - Implicit type coercsion: If you try to add something in JavaScript, JavaScript will do its best.
+                            ![](img/DeeplyUngodly.png)
+                            - Even when its best is deeply awful. 
                     </textarea>
                 </section>
+                <section data-markdown>
+                        <textarea data-template>
+                                ### JavaScript Gotchas
+                                - Equals doesn't always mean equals
+                                ```JavaScript
+                                == 
+                                ```
+                                In JavaScript does type conversion before checking for equality, leading to this mess
+                                ![](img/cusedEqualityChecking.png)
+                        </textarea>
+                    </section>
+    
                 <section data-markdown>
                     <textarea data-template>
                             # Little more on SVG
