Added end of JavaScript section

--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
                 </section>
                 <section data-markdown>
                     <textarea data-template>
+                        ### Exercise 1
+                        - browser over to ```http://localhost:8081/Section1_HTML/test.html```
+                        - Pretty plain, right?
+                        - As an exercise, ```http://localhost:8081/Section1_HTML/broken.html``` is the same thing, but broken
+                        - Fix it
+                    </textarea>
+                </section>
+                <section data-markdown>
+                    <textarea data-template>
                         # CSS
                         ![I went to RISD](/img/risd.png)
                     </textarea>
@@ -345,10 +354,29 @@
                                 == 
                                 ```
                                 In JavaScript does type conversion before checking for equality, leading to this mess
-                                ![](img/cusedEqualityChecking.png)
                         </textarea>
                     </section>
-    
+                    <section data-markdown>
+                            <textarea data-template>
+                                ![](img/cusedEqualityChecking.png)
+                            </textarea>
+                        </section>
+                    <section data-markdown>
+                        <textarea data-template>
+                                ### Experimenting > Reading
+                                - Best place to play with JavaScript is in your browser.
+                                - The Dev Tools in most browsers give you access to the JavaScript console.
+                                - Just like when you run ``python`` and get the python interpreter to interact with.
+                                ![](img/consoleTools.png)                         
+                        </textarea>
+                    </section>
+                    <section data-markdown>
+                        <textarea data-template>
+                            # Exercise 3
+
+                            Write the necessary JavaScript functions for both exercise1 and exercise2
+                        </textarea>
+                    </section>
                 <section data-markdown>
                     <textarea data-template>
                             # Little more on SVG
@@ -441,15 +469,6 @@
                             - This will serve up a lightweight webserver in python on port 8081
                         </textarea>
                     </section>
-                    <section data-markdown>
-                            <textarea data-template>
-                                ### Exercise 1
-                                - browser over to ```http://localhost:8081/Section1_HTML/test.html```
-                                - Pretty plain, right?
-                                - As an exercise, ```http://localhost:8081/Section1_HTML/broken.html``` is the same thing, but broken
-                                - Fix it
-                            </textarea>
-                        </section>
                         <section data-markdown>
                                 <textarea data-template>
                                     ### Class and IDs
