Added draft section 4

--- a/index.html
+++ b/index.html
@@ -326,17 +326,6 @@
                                 - Standard types: strings, numbers, booleans. 
                         </textarea>
                     </section>
-                    <section data-markdown>
-                            <textarea data-template>
-                                ### Defining variable
-                                 ```JavaScript
-                                    var i = 0;
-                                    var a = "string";
-                                    var bool = false;
-                                    ```
-                                    - Standard types: strings, numbers, booleans. 
-                            </textarea>
-                        </section>
                 <section data-markdown>
                     <textarea data-template>
                             ### JavaScript Gotchas
@@ -379,16 +368,6 @@
                     </section>
                 <section data-markdown>
                     <textarea data-template>
-                            # Little more on SVG
-
-                            - [Show little snippet of SVG here]
-                            - SVG is XML based 
-                            - rect, circle, ellipse, line, text, and path are all valid shapes
-                            - Your visualizations are made by drawing these shapes and updating them with JavaScript
-                    </textarea>
-                </section>
-                <section data-markdown>
-                    <textarea data-template>
                             # General flow of d3:
                             
                             - Read in your data
@@ -429,54 +408,23 @@
                 </section>
                 <section data-markdown>
                     <textarea data-template>
-                            # Update the DOM with d3
+                            # Personal Website
 
-                            - Look in Section2_ReadData
+                            - Look in Section4_ReadData
                             - Open exercise 1.html
-                            - Right now, you should see the new paragraph added like we showed in the slide.
-                            - Change this code so instead, there is an h1 tag that says "New Header"
-                    </textarea>
-                </section>
-                <section data-markdown>
-                    <textarea data-template>
-                            # Read in Data
-
-                            - D3 is pretty smart, and has been built to read lots of formats. 
-                            - CSV with ```d3.csv()```
-                            - JSON with ```d3.json()```
-                            - TSV with ```d3.tsv()```
-                            - You get the idea, perhaps?
-                    </textarea>
-                </section>
-                <section data-markdown>
-                    <textarea data-template>
-                        # So let's read in data
-
-                        - look in Section2_ReadData
-                        - Open exercise2.html
-                        - As soon as you browser to the html, your data is read in. Nice!
-                        - The exercise here is instead to tell me what you can learn about the data structure d3 uses after the data is read in.
-                        - You got 5 minutes to tell us what cool things you've learned. GO GO GO!                    
-                    </textarea>
-                </section>
-                    <section data-markdown>
-                        <textarea data-template>
-                            ### For Lab Exercises
-                            - Clone this to your machine:
-                            - ```git clone https://github.com/SJCaldwell/webDevBootcamp.git```
-                            - ```cd webDevBootcamp```
-                            - ```python -m SimpleHTTPServer 8081``
-                            - This will serve up a lightweight webserver in python on port 8081
+                            - Must write custom HTML 
+                            - Must have custom CSS operating on those elements
+                            - Must use D3 to create 3 or more custom text elements (h1, p, whatever you have)
                         </textarea>
+                </section>
+                <section data-markdown>
+                        <textarea data-template>
+                                # What do I turn in?
+    
+                                - Link to your forked repo 
+                                - Screenshot of your personal site
+                            </textarea>
                     </section>
-                        <section data-markdown>
-                                <textarea data-template>
-                                    ### Class and IDs
-                                    - <p class="classhere">Added class </p>
-                                    - <div id="content"></div>
-                                    - These will allow you to reference certain elements from CSS and JS for styling and manipulation
-                                </textarea>
-                            </section>
                 <section data-markdown>
                     <textarea data-template>
                         ### The End
