Updated index: Probably not going to have a real SVG section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
                         - HTML 
                         - CSS 
                         - JavaScript
-                        - SVG
                     </textarea>
                 </section>
                 <section data-markdown>
@@ -126,7 +125,7 @@
                 <section data-markdown>
                     <textarea data-template>
                         ### Exercise 1
-                        - browser over to ```http://localhost:8081/Section1_HTML/test.html```
+                        - browse over to ```http://localhost:8081/Section1_HTML/test.html```
                         - Pretty plain, right?
                         - As an exercise, ```http://localhost:8081/Section1_HTML/broken.html``` is the same thing, but broken
                         - Fix it
@@ -330,7 +329,7 @@
                     <textarea data-template>
                             ### JavaScript Gotchas
                             - This could be a really long section
-                            - Implicit type coercsion: If you try to add something in JavaScript, JavaScript will do its best.
+                            - Implicit type coercion: If you try to add something in JavaScript, JavaScript will do its best.
                             ![](img/DeeplyUngodly.png)
                             - Even when its best is deeply awful. 
                     </textarea>
