Updated RISD image

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <section data-markdown>
                     <textarea data-template>
                         # CSS
-                        ![I went to RISD](/img/risd.png)
+                        ![I went to RISD](img/risd.png)
                     </textarea>
                 </section>
                 <section data-markdown>
